--- a/blank.html
+++ b/blank.html
@@ -1,4 +1,30 @@
 <html>
+<head>
+  <!-- These add loading/parsing time -->
+  <!--
+  <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+  <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/d3/4.10.2/d3.min.js'></script>
+  <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.min.js'></script>
+  <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react.min.js'></script>
+  <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/react-dom/15.6.1/react-dom.min.js'></script>
+  -->
+
+  <!-- These will cause errors, but they'll execute -->
+  <!--
+  <script type='text/javascript' src='https://rawcdn.githack.com/WhisperSystems/Signal-Desktop/master/js/components.js'></script>
+  <script type='text/javascript' src='https://rawcdn.githack.com/WhisperSystems/Signal-Desktop/master/js/signal_protocol_store.js'></script>
+  <script type='text/javascript' src='https://rawcdn.githack.com/WhisperSystems/Signal-Desktop/master/js/libtextsecure.js'></script>
+  <script type='text/javascript' src='https://rawcdn.githack.com/WhisperSystems/Signal-Desktop/master/js/libphonenumber-util.js'></script>
+  -->
+
+  <!-- These intentionally fail -->
+  <!--
+  <script type='text/javascript' src='https://raw.githubusercontent.com/WhisperSystems/Signal-Desktop/master/js/libtextsecure.js'></script>
+  <script type='text/javascript' src='https://raw.githubusercontent.com/WhisperSystems/Signal-Desktop/master/js/components.js'></script>
+  <script type='text/javascript' src='https://raw.githubusercontent.com/WhisperSystems/Signal-Desktop/master/js/libphonenumber-util.js'></script>
+  -->
+</head>
+
 <body>
 Nuthin'
 </body>
